<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbox_background"

    >
    <RelativeLayout
        android:id="@+id/box_anim_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >

        <RelativeLayout
            android:id="@+id/loginbox_topbackground"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/loginbox_topbackground"

            >



            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/welcome_text"
                android:textColor="@color/white_text"
                android:textSize="50sp"
                />

            <TextView
                android:id="@+id/welcome_text_china"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text"
                android:text="@string/welcome_text_china"
                android:textColor="@color/white_text"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                />

            <AutoCompleteTextView
                android:id="@+id/login_input01"
                android:labelFor="@+id/login_input01"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_below="@+id/welcome_text_china"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:background="@drawable/login_input_background"
                android:paddingStart="60dp"
                android:paddingEnd="40dp"
                />
            <ImageView
                android:id="@+id/input_user_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@+id/welcome_text_china"
                android:layout_marginTop="84dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/input_user_icon"
                />
            <TextView
                android:id="@+id/spacer01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text_china"
                android:layout_marginTop="80dp"
                android:layout_marginStart="55dp"
                android:background="@drawable/login_spacer"
                />
            <ImageView
                android:id="@+id/input_password_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@+id/input_user_img"
                android:src="@drawable/password_icon"
                android:layout_marginStart="25dp"
                android:layout_marginTop="33dp"
                />
            <TextView
                android:id="@+id/spacer02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spacer01"
                android:layout_marginTop="26dp"
                android:layout_marginStart="55dp"
                android:background="@drawable/login_spacer"
                />
            <AutoCompleteTextView
                android:id="@+id/login_input02"
                android:labelFor="@+id/login_input02"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_input01"
                android:layout_marginTop="13dp"
                android:background="@drawable/login_input_background"
                android:paddingStart="60dp"
                android:paddingEnd="40dp"
                />
            <Button
                android:id="@+id/login_button"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_below="@+id/login_input02"
                android:text="@string/login_button_text"
                android:textSize="20sp"
                android:textColor="@color/white_text"
                android:background="@drawable/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:text="@string/register"
                android:textColor="@color/forget_password"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                />
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/forget_password"
                android:layout_below="@id/login_button"
                android:layout_marginStart="220dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/order_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:text="@string/order_username"
                android:textColor="@color/white_text"
                android:layout_marginTop="80dp"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
        <ImageView
            android:id="@+id/boxhead"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/boxhead"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"


            />
        <RelativeLayout
            android:id="@+id/registerbox_topbackground"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/loginbox_topbackground"
            android:visibility="invisible"
            >

            <!--ImageView
                android:id="@+id/login_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"

                /-->

            <TextView
                android:id="@+id/register_welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/welcome_text"
                android:textColor="@color/white_text"
                android:textSize="50sp"
                />

            <TextView
                android:id="@+id/register_welcome_text_china"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_welcome_text"
                android:text="@string/welcome_text_china"
                android:textColor="@color/white_text"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                />

            <AutoCompleteTextView
                android:id="@+id/register_input01"
                android:labelFor="@+id/login_input01"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_below="@+id/register_welcome_text_china"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:background="@drawable/login_input_background"
                android:paddingStart="60dp"
                android:paddingEnd="40dp"
                />
            <ImageView
                android:id="@+id/register_user_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@+id/register_welcome_text_china"
                android:layout_marginTop="84dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/input_user_icon"
                />
            <TextView
                android:id="@+id/register_spacer01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_welcome_text_china"
                android:layout_marginTop="80dp"
                android:layout_marginStart="55dp"
                android:background="@drawable/login_spacer"
                />
            <ImageView
                android:id="@+id/register_input_password_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@+id/register_user_img"
                android:src="@drawable/password_icon"
                android:layout_marginStart="25dp"
                android:layout_marginTop="33dp"
                />
            <TextView
                android:id="@+id/register_spacer02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_spacer01"
                android:layout_marginTop="26dp"
                android:layout_marginStart="55dp"
                android:background="@drawable/login_spacer"
                />
            <AutoCompleteTextView
                android:id="@+id/register_input02"
                android:labelFor="@+id/login_input02"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/register_input01"
                android:layout_marginTop="13dp"
                android:background="@drawable/login_input_background"
                android:paddingStart="60dp"
                android:paddingEnd="40dp"
                />
            <Button
                android:id="@+id/register_button"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_below="@+id/register_input02"
                android:text="@string/register_button_text"
                android:textSize="20sp"
                android:textColor="@color/white_text"
                android:background="@drawable/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/register_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:layout_below="@+id/register_button"
                android:textColor="@color/forget_password"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/register_order_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_button"
                android:text="@string/order_username"
                android:textColor="@color/white_text"
                android:layout_marginTop="80dp"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
